@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2009-02-24"
 #define RUBY_VERSION_CODE 187
 #define RUBY_RELEASE_CODE 20090224
-#define RUBY_PATCHLEVEL 140
+#define RUBY_PATCHLEVEL 141
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
